force-app/main/default/objects/LGF_Template__c/LGF_Template__c.object-meta.xml
<CustomObject>
    <label>【LGForce】テンプレート</label>
    <nameField>
        <label>テンプレート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>