force-app/main/default/objects/LGF_Template__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <label>ContentDocument ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>