force-app/main/default/objects/LGF_Template__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>