force-app/main/default/objects/LGF_Template__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>オブジェクトAPI参照名</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>